--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,14 @@ docker
 uvicorn
 fastapi
 streamlit
--e .
+# -e .
+gdown
+
+pyYAML
+tqdm
+py7zr
+python-box==6.0.2
+boto3
+mypy-boto3-s3
+matplotlib
+ensure
