--- a/params.yaml
+++ b/params.yaml
@@ -1,1 +1,6 @@
-key : "value"
+TrainingArguments:
+  epochs: 30
+  weight_decay: 0.01
+  learning_rate : 0.01
+  optimizer: ["Adam" , "SGD", "RMSprop"]
+  
